--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,15 @@
 <!doctype html> 
-<html lang="en"> 
-<head> 
+<html lang="en" > 
+<head>
 	<meta charset="UTF-8" />
-	<title>Phaser - Making your first game, part 1</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-	<script src="./node_modules/babel-polyfill/dist/polyfill.min.js"></script>
-	<script data-main="./app.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
-
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
+	<title>Colonide</title>
+  <style type="text/css">
+      body {
+          margin: 0;
+      }
+  </style>
 </head>
-<body>
+<body data-ng-app="colonideUI">
+  <planet-panel></planet-panel>
 </body>
 </html>
