Itegrate Angular, add planets panel UI

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   </style>
 </head>
 <body data-ng-app="colonideUI">
-  <planet-panel></planet-panel>
+  <root-panel></root-panel>
 </body>
 </html>
