Add colonize button, add game state, time and top bar with date display

--- a/src/ui/planetPanel/planetPanel.html
+++ b/src/ui/planetPanel/planetPanel.html
@@ -16,4 +16,12 @@
     </p>
   </div>
   
+    
+  <div class="actions-panel">
+    <div ng-if="planetPanel.planetData.state === 'uncolonized' && planetPanel.planetData.isHabitable">
+      <div class="colonize-button">
+        <img src="/resources/icons/colonize-icon.png"></img>Colonize</div>
+    </div>
+  </div>
+  
 </div>
