--- a/src/ui/rootPanel/rootPanel.html
+++ b/src/ui/rootPanel/rootPanel.html
@@ -1,3 +1,3 @@
 <div class="root-panel-container" ng-style="{ width: rootPanel.width, height: rootPanel.height }">
-  <planet-panel planet-data="rootPanel.selectedPlanet"></planet-panel>
+  <planet-panel planet="rootPanel.selectedPlanet"></planet-panel>
 </div>
