Add sounds, some ui, webpack devsrv, plugins

--- a/src/ui/rootPanel/rootPanel.html
+++ b/src/ui/rootPanel/rootPanel.html
@@ -1,3 +1,4 @@
 <div class="root-panel-container" ng-style="{ width: rootPanel.width, height: rootPanel.height }">
+  <event-ribbon event-data="rootPanel.ribbonEventData"></event-ribbon>
   <planet-panel planet="rootPanel.selectedPlanet"></planet-panel>
 </div>
