Add industry progress, mechanics and game resources

--- a/src/ui/planetPanel/panelPartials/colonized.html
+++ b/src/ui/planetPanel/panelPartials/colonized.html
@@ -1,5 +1,3 @@
 <div ng-if="planetPanel.isPlanetColonized()">
-  
-  <planet-actions-panel planet="planetPanel.planet"></planet-actions-panel>
-  
+  <planet-manager planet="planetPanel.planet"></planet-manager>
 </div>
