--- a/src/ui/planetPanel/planetPanel.html
+++ b/src/ui/planetPanel/planetPanel.html
@@ -24,7 +24,7 @@
     <h3>{{planetPanel.planet.type}}</h3>
   </div>
   
-  <div class="info-panel">
+  <div class="info-panel" ng-if="!planetPanel.isPlanetColonized()">
     <p>Temperature: {{planetPanel.planet.temperature}}℃</p>
     <p>Distance to nearest star: {{planetPanel.planet.dist}} AU</p>
     <p>Size (diameter): {{planetPanel.planet.size | number:0}} km</p>
