--- a/src/ui/planetPanel/panelPartials/colonized.html
+++ b/src/ui/planetPanel/panelPartials/colonized.html
@@ -1,3 +1,3 @@
 <div ng-if="planetPanel.isPlanetColonized()">
-  <planet-manager planet="planetPanel.planet"></planet-manager>
+  <planet-manager planet="planetPanel.planet" game-time="planetPanel.gameTime"></planet-manager>
 </div>
