--- a/src/ui/rootPanel/rootPanel.html
+++ b/src/ui/rootPanel/rootPanel.html
@@ -1,4 +1,6 @@
 <div class="root-panel-container" ng-style="{ width: rootPanel.width, height: rootPanel.height }">
   <event-ribbon event-data="rootPanel.ribbonEventData"></event-ribbon>
-  <planet-panel planet="rootPanel.selectedPlanet"></planet-panel>
+  <planet-panel planet="rootPanel.selectedPlanet" game-time="rootPanel.gameTime"></planet-panel>
+  <main-panel></main-panel>
+  <item-details-tooltip></item-details-tooltip>
 </div>
