--- a/src/ui/planetManager/planetManager.html
+++ b/src/ui/planetManager/planetManager.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="tab-btn" ng-class="{ opened: manager.openedTab === 'buildings'}" ng-click="manager.openTab('buildings')">
-      <img class="small-icon" src="/resources/icons/building.png">Buildings
+      <img class="small-icon" src="/resources/icons/building.png">Base
     </div>
 
     <div class="tab-btn" ng-class="{ opened: manager.openedTab === 'fleet'}" ng-click="manager.openTab('fleet')">
